# rust-snippets-mcp

./: Cargo.toml  README.md
src/: main.rs
